--- a/all-sights/src/app/admin/add-administrative-region/add-administrative-region.component.html
+++ b/all-sights/src/app/admin/add-administrative-region/add-administrative-region.component.html
@@ -15,7 +15,7 @@
         <div class="col-8">
           <div class="form-group">
             <label>Title</label>
-            <input type="text" class="form-control" [formControlName]="'title'" title="Title">
+            <input type="text" class="form-control" [formControlName]="'title'" placeholder="Title">
           </div>
         </div>
       </div>
