edit region all fields, edit settlement all fields, some models changes

--- a/all-sights/src/app/admin/add-administrative-region/add-administrative-region.component.html
+++ b/all-sights/src/app/admin/add-administrative-region/add-administrative-region.component.html
@@ -113,7 +113,7 @@
       <div class="form-group">
         <label>Area</label>
         <input type="number" class="form-control" [formControlName]="'area'" title="Area" aria-describedby="areaHelp">
-        <small id="areaHelp" class="form-text text-muted">Area of region in km2.</small>
+        <small id="areaHelp" class="form-text text-muted">Area of region in km<sup>2</sup>.</small>
       </div>
       <fieldset class="form-group">
         <label>Population <i (click)="addPopulation()">+</i></label>
