--- a/all-sights/src/app/admin/admin-settlements/admin-settlements.component.scss
+++ b/all-sights/src/app/admin/admin-settlements/admin-settlements.component.scss
@@ -5,8 +5,37 @@
 }
 
 .table {
+  font-size: 12px;
 
   td {
     vertical-align: inherit;
+
+    .title {
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    .area {
+      text-align: center;
+      white-space: nowrap;
+    }
+
+    .population {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      white-space: nowrap;
+    }
+
+    .list-group {
+      overflow: auto;
+      max-height: 500px;
+
+      .list-group-item {
+        padding: 0.25rem;
+        text-align: center;
+      }
+    }
   }
 }
