--- a/all-sights/src/app/admin/admin-settlements/admin-settlements.component.html
+++ b/all-sights/src/app/admin/admin-settlements/admin-settlements.component.html
@@ -17,26 +17,24 @@
       <tbody>
       <tr *ngFor="let settlement of settlements">
         <td>
-          <div class="list-group">
-            <span class="list-group-item text-center">
-              {{ settlement.localization[language].title }}
-            </span>
+          <div class="title">
+            {{ settlement.localization[language].title }}
           </div>
         </td>
         <td>
-          <span>{{ settlement.area }} km<sup>2</sup></span>
+          <div class="area">{{ settlement.area }} km<sup>2</sup></div>
         </td>
         <td>
-          <div class="list-group">
-            <span class="list-group-item" *ngFor="let year of settlement.population | keyvalue">
-              {{ year.key }}: {{ year.value }}
+          <div class="population">
+            <span class="text-center" *ngFor="let year of settlement.population | keyvalue">
+              <b>{{ year.key }}:</b> {{ year.value }}
             </span>
           </div>
         </td>
         <td>
           <div class="list-group">
             <a class="list-group-item" [routerLink]="['/admin/regions/' + item.id]" *ngFor="let item of settlement.regions">
-              {{ item.localization[language].title }}
+              {{ item.localization[language].title }}<br/>{{ item.period.toString() }}
             </a>
           </div>
         </td>
